--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,19 @@
         android:theme="@style/Base.Theme.Quizzify.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".activities.startQuiz"
+            android:exported="false" />
+        <activity
             android:name=".activities.ResultActivity"
             android:exported="false" />
         <activity
             android:name=".activities.QuestionActivity"
             android:exported="false"
-            android:theme="@style/Base.Theme.Quizzify"></activity>
+            android:theme="@style/Theme.MaterialComponents.Light.Bridge" />
         <activity
             android:name=".activities.MainActivity"
             android:exported="false"
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
+            android:theme="@style/Base.Theme.Quizzify" />
         <activity
             android:name=".activities.SignInActivity"
             android:exported="false" />
