--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Base.Theme.Quizzify.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".activities.editProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.profileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.nextactivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.startQuiz"
             android:exported="false" />
         <activity
@@ -20,12 +29,11 @@
             android:exported="false" />
         <activity
             android:name=".activities.QuestionActivity"
-            android:exported="false"
-            android:theme="@style/Theme.MaterialComponents.Light.Bridge" />
+            android:exported="false" />
         <activity
             android:name=".activities.MainActivity"
             android:exported="false"
-            android:theme="@style/Base.Theme.Quizzify" />
+            android:theme="@style/Base.Theme.Quizzify.NoActionBar" />
         <activity
             android:name=".activities.SignInActivity"
             android:exported="false" />
@@ -41,6 +49,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
 
         <meta-data
             android:name="preloaded_fonts"
